--- a/index.html
+++ b/index.html
@@ -2,66 +2,92 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Soulflower Valentine 💕</title>
 
 <style>
 body {
     margin: 0;
     height: 100vh;
+    background: #FFB6C1;
+    font-family: 'Segoe UI', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #ff9a9e, #fecfef);
-    font-family: 'Segoe UI', sans-serif;
     overflow: hidden;
 }
 
+/* Floating hearts */
+.heart {
+    position: fixed;
+    color: rgba(255, 105, 180, 0.6);
+    animation: floatUp linear infinite;
+    pointer-events: none;
+}
+@keyframes floatUp {
+    from { transform: translateY(100vh); opacity: 1; }
+    to { transform: translateY(-10vh); opacity: 0; }
+}
+
+/* Card */
 .container {
     background: white;
-    padding: 40px 40px 40px;  /* Increased top and bottom padding */
-    border-radius: 35px;
+    width: 480px;
+    max-width: 90vw;
+    height: 90vh;
+    max-height: 680px;
+    padding: 32px 30px 45px;
+    border-radius: 42px;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.25);
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    box-shadow: 0 15px 35px rgba(0,0,0,0.2);
-    position: relative;
-    width: 380px;  /* Increased width */
-    min-height: 450px;  /* Added minimum height for more vertical space */
 }
 
-h1 {
+/* 🔒 FORCED 2-LINE TITLE */
+.title {
+    font-size: 2rem;
+    font-weight: 900;
+    line-height: 1.12;
     color: #d63384;
-    margin-bottom: 15px;
+    max-width: 420px;          /* LOCKS 2 lines */
+    margin: 0 auto 18px;
+    letter-spacing: -0.6px;   /* prevents overflow */
 }
 
+/* Image */
 .product {
-    width: 220px;
-    margin: 15px auto 20px;
-    display: block;
+    width: 100%;
+    max-width: 350px;
+    margin: 15px auto 35px;
+    height: auto;
 }
 
+/* Buttons moved UP */
 .buttons {
     display: flex;
-    justify-content: center;
-    gap: 25px;
-    margin-top: 15px;
+    gap: 15px;
+    margin-top: auto;
+    margin-bottom: 40px;   /* 👈 THIS moves buttons upward */
 }
 
 button {
-    padding: 14px 26px;
-    font-size: 1.1rem;
-    border: none;
-    border-radius: 14px;
-    cursor: pointer;
+    flex: 1;
+    padding: 20px;
+    font-size: 1.4rem;
     font-weight: bold;
-    transition: 0.2s;
+    border: none;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: 0.2s ease;
 }
 
 #yesBtn {
     background: #ff6b9d;
     color: white;
 }
-
 #yesBtn:hover {
-    transform: scale(1.08);
+    transform: scale(1.05);
 }
 
 #noBtn {
@@ -70,20 +96,28 @@ button {
     position: relative;
 }
 
+/* Celebration */
 #celebration {
     display: none;
+    background: white;
+    padding: 50px;
+    border-radius: 40px;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.3);
     text-align: center;
 }
+#celebration h1 {
+    font-size: 2.8rem;
+}
 
+/* Heart pop */
 #heart {
-    font-size: 120px;
+    font-size: 130px;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
     animation: pop 0.8s ease forwards;
 }
-
 @keyframes pop {
     0% { transform: translate(-50%, -50%) scale(0); }
     60% { transform: translate(-50%, -50%) scale(1.3); }
@@ -96,19 +130,16 @@ button {
 
 <div class="container" id="mainCard">
 
-<h1 style="white-space: nowrap; font-size: 1.2rem; line-height: 1.4;"> 💕 Will you be Soulflower’s Valentine? 💕</h1>
+    <!-- 🔒 EXACTLY 2 LINES -->
+    <h1 class="title">
+       Will you be Soulflower’s Valentine? 💕
+    </h1>
 
-
-    <!-- CENTER IMAGE -->
-    <img
-      src="Love.png"
-      alt="Soulflower Rosemary Hair Oil"
-      class="product"
-    >
+    <img src="Love.png" class="product" alt="Love">
 
     <div class="buttons">
         <button id="yesBtn">❤️ YES ❤️</button>
-        <button id="noBtn">No</button>
+        <button id="noBtn">NO</button>
     </div>
 </div>
 
@@ -127,16 +158,14 @@ const maxRuns = 8;
 
 function moveNo() {
     noCount++;
-
     if (noCount >= maxRuns) {
         confirmYes();
         return;
     }
-
-    const x = Math.random() * (window.innerWidth - 120);
-    const y = Math.random() * (window.innerHeight - 60);
-
-    noBtn.style.position = 'fixed';
+    const rect = mainCard.getBoundingClientRect();
+    const x = Math.random() * (rect.width - noBtn.offsetWidth);
+    const y = Math.random() * (rect.height - noBtn.offsetHeight - 90);
+    noBtn.style.position = 'absolute';
     noBtn.style.left = x + 'px';
     noBtn.style.top = y + 'px';
 }
@@ -146,7 +175,7 @@ noBtn.addEventListener('click', moveNo);
 
 function confirmYes() {
     mainCard.style.display = 'none';
-    celebration.style.display = 'block';
+    celebration.style.display = 'flex';
 
     const heart = document.createElement('div');
     heart.id = 'heart';
@@ -155,7 +184,21 @@ function confirmYes() {
 }
 
 yesBtn.addEventListener('click', confirmYes);
+
+/* Floating hearts */
+function floatingHeart() {
+    const heart = document.createElement('div');
+    heart.className = 'heart';
+    heart.innerHTML = '❤️';
+    heart.style.left = Math.random() * 100 + 'vw';
+    heart.style.fontSize = 18 + Math.random() * 28 + 'px';
+    heart.style.animationDuration = 4 + Math.random() * 4 + 's';
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 7000);
+}
+setInterval(floatingHeart, 350);
 </script>
 
 </body>
 </html>
+
